--- a/index.html
+++ b/index.html
@@ -5,19 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProjLandingPage</title>
+    <link rel="stylesheet" href="./stylesheet.css">
 </head>
 <body>
     <div class="header">
-        <h2>This Website is awesome!</h2>
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectet</div>
-        <button>Sign Up</button>
+        <div class="header-container-left">
+            <div class="logo">Header Logo</div>
+            <h2>This Website is awesome!</h2>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectet</div>
+            <button>Sign Up</button>
+        </div>
+        <div class="header-container-right">
+            <div class="links">
+                <ul>
+                    <li><a href="#">header-link-one</a></li>
+                    <li><a href="#">header-link-two</a></li>
+                    <li><a href="#">header-link-three</a></li>
+                </ul>
+                <div class="picture-container"></div>
+            </div>
+        </div>
     </div>
     <div class="content-container">
-        <div class="content"></div>
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
+        <div class="content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
+        <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
+        <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
+        <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
         <div class="quote-container">
             <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
         </div>
