Rough header container completed

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="header-container-left">
             <div class="logo">Header Logo</div>
             <h2>This Website is awesome!</h2>
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectet</div>
-            <button>Sign Up</button>
+            <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectet</div>
+            <button class="header-button"> Sign Up</button>
         </div>
         <div class="header-container-right">
             <div class="links">
@@ -28,15 +28,23 @@
     </div>
     <div class="content-container">
         <div class="content">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
-        <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
-        <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
-        <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
-        <div class="quote-container">
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
-        </div>
+            <img src="./img/rapslogo.png">
+        This is some subtext under an illustration or image</div>
+        <div class="content">
+            <img src="./img/rapslogo.png">
+        This is some subtext under an illustration or image</div>
+        <div class="content">
+            <img src="./img/rapslogo.png">
+        This is some subtext under an illustration or image</div>
+        <div class="content">
+            <img src="./img/rapslogo.png">
+        This is some subtext under an illustration or image</div>
+    </div>
+    <div class="quote-container">
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
+    </div>
     <div class="footer">
-        <button>Sign Up</button>
+        <button class="w3-button w3-black"> Sign Up</button>
     </div>
     </div>
 </body>
