Split bottom container in two; 70/30 ratio.

--- a/index.html
+++ b/index.html
@@ -22,29 +22,49 @@
                     <li><a href="#">header-link-two</a></li>
                     <li><a href="#">header-link-three</a></li>
                 </ul>
-                <div class="picture-container"></div>
+                <div class="picture-container">
+                    <img src="./img/raps.jpg">
+                </div>
             </div>
         </div>
     </div>
+    <h2>Some random information</h2>
     <div class="content-container">
         <div class="content">
             <img src="./img/rapslogo.png">
-        This is some subtext under an illustration or image</div>
+        <span class="text"> This is some subtext under an illustration or image</span>
+        </div>
         <div class="content">
             <img src="./img/rapslogo.png">
-        This is some subtext under an illustration or image</div>
+        <span class="text"> This is some subtext under an illustration or image</span>
+        </div>
         <div class="content">
             <img src="./img/rapslogo.png">
-        This is some subtext under an illustration or image</div>
+        <span class="text">This is some subtext under an illustration or image</span>
+        </div>
         <div class="content">
             <img src="./img/rapslogo.png">
-        This is some subtext under an illustration or image</div>
+        <span class="text">This is some subtext under an illustration or image</span>
+        </div>
     </div>
     <div class="quote-container">
-    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora maiores natus nihil dolorem ducimus maxime delectus consectetur aliquam repellat. Deleniti harum quisquam repellat atque aperiam officia omnis beatae blanditiis corrupti?</div>
+    <q>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</q>
+    <span class="thor">- Thor, God of Thunder</span>
+    </div>
+    <div class="btm-container">
+        <div class="btm-button-container">
+            <div class="left-container">
+                <span class="one">Call to action! It's time!</span>
+                <span class="two">Sign up for our product by clicking that button right over there!
+                </span>
+            </div>
+            <div class="right-container">
+                <button class="btm-button"> Sign Up </button>
+            </div>
+        </div>   
     </div>
     <div class="footer">
-        <button class="w3-button w3-black"> Sign Up</button>
+        <span>Copyright © The Odin Project</span> 
     </div>
     </div>
 </body>
